--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -15,9 +15,19 @@
                         <wm-panel iconclass="wi wi-account-circle" name="panelProfileInfo" title="My Profile Information" badgetype="primary" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5">
                                 <wm-gridrow name="gridrow20">
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn33" horizontalalign="center">
-                                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot;" width="30em" height="30em" margin="5% unset"></wm-picture>
-                                        <wm-button class="btn-default btn-primary" caption="Upload Photo" type="button" margin="unset 0.5em" name="buttonUpdateProfilePic" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()" horizontalalign="center"></wm-button>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn33">
+                                        <wm-layoutgrid name="layoutgrid8">
+                                            <wm-gridrow name="gridrow28">
+                                                <wm-gridcolumn columnwidth="12" name="gridcolumn34_2" horizontalalign="center">
+                                                    <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot;" width="300px" height="300px" margin="2em unset"></wm-picture>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                            <wm-gridrow name="gridrow29">
+                                                <wm-gridcolumn columnwidth="12" name="gridcolumn36_2" horizontalalign="center">
+                                                    <wm-button class="btn-default btn-primary" caption="Upload Photo" type="button" name="buttonUpdateProfilePic" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()"></wm-button>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                        </wm-layoutgrid>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset unset unset 5%">
                                         <wm-composite name="composite1" width="80%" margin="2% unset unset unset">
@@ -134,19 +144,24 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn16_1">
-                        <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipalities" class="panel-primary">
+                        <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipality Subscriptions" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5_2">
                                 <wm-gridrow name="gridrow25">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn34_1" horizontalalign="center">
                                         <wm-livegrid formlayout="dialog" name="livegrid1">
-                                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.GetUserSubscriptions.dataSet" navigation="Classic" name="grid1">
-                                                <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" type="string" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.GetUserSubscriptions.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL">
                                                 <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.logo" caption="Logo" type="blob" widget-type="image" primary-key="false" generator="assigned" readonly="true" sortable="false" searchable="false"
+                                                show="true" filterwidget="text" related-entity-name="Municipalities"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}">
+                                                </wm-grid-column>
+                                                <wm-grid-column binding="municipalities.phone" caption="Phone" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.email" caption="Email" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="text" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
-                                            <wm-liveform novalidate="false" errormessage="You have already subscribed to that municipality." title="Usersubscriptions Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetUserSubscriptions.dataSet"
+                                            <wm-liveform novalidate="false" errormessage="You have already subscribed to that municipality." title="Add Subscription" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetUserSubscriptions.dataSet"
                                             captionalign="left" captionposition="top" name="liveform2" insertmessage="Municipality added successfully" deletemessage="Municipality deleted successfully">
                                                 <wm-layoutgrid columns="1" name="layoutgrid7">
                                                     <wm-gridrow name="gridrow27_1">
@@ -156,14 +171,14 @@
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
-                                                <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="false" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" widget="date" maxchars="255" placeholder="Enter value"
-                                                defaultvalue="CURRENT_DATE" outputformat="timestamp"></wm-form-field>
-                                                <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" placeholder="Select value"
-                                                defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
                                                 <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
                                                 placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
+                                                <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="false" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" widget="date" maxchars="255"
+                                                placeholder="Enter value" defaultvalue="CURRENT_DATE" outputformat="timestamp"></wm-form-field>
                                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                             </wm-liveform>
                                         </wm-livegrid>
                                     </wm-gridcolumn>
