--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -68,13 +68,12 @@
                                 <wm-livegrid formlayout="dialog" name="livegrid3">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2GisrecordsData.dataSet" navigation="Classic" name="grid3" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
                                         <wm-grid-column binding="subdivisions.subdivision" caption="Subdivision" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Subdivisions"></wm-grid-column>
-                                        <wm-grid-column binding="subdivisions.subShortCode" caption="Sub Short Code" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Subdivisions"></wm-grid-column>
                                         <wm-grid-column binding="parcel" caption="Parcel" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="lot" caption="Lot" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="section" caption="Section" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="streetNumber" caption="Street Number" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="streetName" caption="Street Name" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="city" caption="City" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="postalCode" caption="Postal Code" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="inspectionZone" caption="Inspection Zone" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                         <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow();addNewRowAction($event)" accessroles="CXAdmin,MunicipalityAdmin"
