Made uniformity changes to the top of pages across site: - breadcrumb margin spacing - page title and select municipality/company dropdown margin spacing - select company/municipality text class name - sorted select municipality/company dropdown alphabetically by municipality/company Files modified - [ManageForms.html,Main.html,VendorApplication.html,ManualFeeTypes.html,ManageSubscriptions.html,MyMunicipality.html,app.variables.json,MunicipalityUsers.variables.json,CompanyProfile.html,CXAdmin.html,ManageGISData.html,MyCompany.html,ManageSubscriptions.variables.json,EditGISRecord.html,pages-config.json,MyProfile.html,ManageUsers.html,CXGlobalSettings.html,WorkSchedule.html,ManageMunicipalityVendors.html,MunicipalitySettings.html,MunicipalityUsers.html,ManageMunicipalities.html,EditForm.html,CompanyMunicipalities.html,MunicipalityAdministration.html,CompanyUsers.html] Removed files - [ManageMuncipalityGroups.html,ManageMuncipalityGroups.js,ManageMuncipalityGroups.variables.json,ManageMuncipalityGroups.css]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -6,13 +6,13 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid4">
                 <wm-gridrow name="gridrow13">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn23" padding="2em unset 1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn23">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" itemlabel="label" itemicon="icon" itemlink="link" name="breadcrumb1"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1">
-                        <wm-label padding="unset 0.5em" name="label2_1" caption="Edit Form" fontweight="bold" fontsize="22"></wm-label>
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="2em unset">
+                        <wm-label padding="unset 0.5em" name="label2_1" caption="Edit Form" fontweight="bold" fontsize="15"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow26_1">
