--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -6,7 +6,7 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid3">
                 <wm-gridrow name="gridrow19">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn32" padding=".2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn32">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlink="link" itemicon="icon" itemlabel="label"></wm-breadcrumb>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn33"></wm-gridcolumn>
