--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -44,7 +44,7 @@
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-people"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn16" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Manage Users" class="p" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Users" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.UsersCount.dataSet[$i].usersCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -61,7 +61,7 @@
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-list"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn14_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="CX Manage Forms" class="p" fontsize="1.4" fontunit="em"></wm-label>
+                                        <wm-label name="tileTitle" caption="CX Forms" class="p" fontsize="1.4" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.CXAdminFormsCount.dataSet.value" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
