--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -5,20 +5,21 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid2">
-                <wm-gridrow name="gridrow12" padding="1em unset unset unset">
+                <wm-gridrow name="gridrow12">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn28">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow9" padding="1em unset">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn23">
-                        <wm-label padding="unset 0.5em" name="label1" caption="My Company" fontsize="20" fontweight="bold"></wm-label>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn23" padding="2em unset">
+                        <wm-label padding="unset 0.5em" name="label1" caption="My Company" fontsize="15" fontweight="bold"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn24">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="1em unset 2em unset">
                         <wm-composite name="composite1">
-                            <wm-label class="col-md-3 control-label" name="label2" caption="Select Company"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Company" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
-                                <wm-select name="selectSelectCompany" dataset="bind:Variables.AdminVendorsList.dataSet" datafield="All Fields" displayfield="CompanyName" datavalue="bind:Variables.AdminVendorsList.firstRecord" on-change="selectSelectCompanyChange($event, $scope, newVal, oldVal)"></wm-select>
+                                <wm-select name="selectSelectCompany" dataset="bind:Variables.AdminVendorsList.dataSet" datafield="All Fields" displayfield="CompanyName" datavalue="bind:Variables.AdminVendorsList.firstRecord" on-change="selectSelectCompanyChange($event, $scope, newVal, oldVal)"
+                                orderby="CompanyName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
