--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -6,20 +6,20 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid3">
                 <wm-gridrow name="gridrow19">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn32" padding=".2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn32">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlink="link" itemicon="icon" itemlabel="label"></wm-breadcrumb>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn33"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding=".2em unset 2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding="2em unset">
                         <wm-label padding="unset 0.5em" caption="GIS Maintenance" fontweight="bold" fontsize="15" name="label2"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="1em unset 2em unset">
                         <wm-composite name="composite1">
-                            <wm-label class="col-md-3 control-label" name="label1" caption="Select Municipality"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" name="label1" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
-                                <wm-select name="select1" dataset="bind:Variables.AdminMunipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.AdminMunipalities.firstRecord"></wm-select>
+                                <wm-select name="select1" dataset="bind:Variables.AdminMunipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.AdminMunipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
