--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -6,7 +6,7 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid2">
                 <wm-gridrow name="gridrow8">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn15" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn15">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
