--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -5,22 +5,19 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1" columns="3">
-                <wm-gridrow name="gridrow7" padding="1em unset">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn17_1">
+                <wm-gridrow name="gridrow7">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn17_1" padding="2em unset">
                         <wm-label padding="unset 0.5em" name="label5" caption="Municipality Administration" fontweight="bold" fontsize="15"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn18_1"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding=".2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="1em unset 2em unset">
                         <wm-composite name="composite1">
-                            <wm-label class="col-md-3 control-label" name="label6" caption="Select Municipality"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
                                 <wm-select name="select1" dataset="bind:Variables.AdminsMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.AdminsMunicipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow6">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn14"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn18" horizontalalign="center" padding="2em unset">
