--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -5,12 +5,12 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
-                <wm-gridrow name="gridrow9" padding="1em unset">
+                <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn23">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow1" padding="2em unset unset unset">
+                <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication"
                         class="panel-primary" on-error="liveformVendorApplicationError($event, $operation, $data)">
