--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -14,7 +14,7 @@
                     <wm-gridcolumn columnwidth="6" name="gridcolumn23" padding="2em unset">
                         <wm-label padding="unset 0.5em" name="label1" caption="My Company" fontsize="15" fontweight="bold"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="1em unset 2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="2em unset">
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Company" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
