--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -15,7 +15,7 @@
                     <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding="2em unset">
                         <wm-label padding="unset 0.5em" caption="GIS Maintenance" fontweight="bold" fontsize="15" name="label2"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="1em unset 2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="2em unset">
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 form-control-static" name="label1" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
